# Surveillance-AI-Homework

./: .gitignore
CV_Tasks/Task_0/: README.md
CV_Tasks/Task_0/c++/: CMakeLists.txt  main.cpp
CV_Tasks/Task_0/python/: main.py
CV_Tasks/Task_1/: README.md
CV_Tasks/Task_1/c++/: main.cpp
CV_Tasks/Task_2/: README.md
CV_Tasks/Task_3/: README.md
CV_Tasks/Task_4/: README.md
CV_Tasks/Task_6/: README.md
CV_Tasks/cv_env/: pyvenv.cfg
QT_Tasks/Task_0/: README.md
QT_Tasks/Task_1/: file_op.h  matrix.txt  sort.cpp
QT_Tasks/Task_2/: README.md
QT_Tasks/Task_3/: README.md
QT_Tasks/Task_4/: README.md
QT_Tasks/Task_5/: README.md
Task_0/Task_1/: image.h  pixel.h
Task_0/Task_2-3/: matrix.hpp
Task_1/: README.md  file_op.cpp  sort.h
Task_2/: README.md  file_handler.cpp  file_handler.h  main.cpp  nex.txt  sorting_application.cpp  sorting_application.h  sorting_strategy.cpp  sorting_strategy.h
Task_2/Sort_Matrix/: CMakeLists.txt
Task_3/: README.md
Task_3/Calculator/: Calculator.pro.user.70cc880  calculator.cpp  calculator.h  calculator.ui
Task_3/build-Calculator-Desktop_Qt_6_6_2_GCC_64bit-Debug/: Calculator  Makefile  moc_calculator.cpp  ui_calculator.h
Task_4/: README.md
Task_4/build-Photos-Desktop_Qt_6_6_2_GCC_64bit-Debug/: Makefile  Photos  moc_photos.cpp  ui_photos.h
Task_5/: README.md
Task_5/Dashboard/: Dashboard.pro
Task_5/build-Dashboard-Desktop_Qt_6_6_2_GCC_64bit-Debug/: Makefile  moc_dashboard.cpp  ui_dashboard.h
Task_6/: README.md
Task_6/build-Annatto-Desktop_Qt_6_8_0_64-Debug/: Makefile  moc_annatto.cpp  ui_annatto.h
(+1549 files in other folders)
